--- a/org.html
+++ b/org.html
@@ -552,10 +552,10 @@
 </head>
 
 <body>
-    <!-- <div class="loader_bg">
+     <div class="loader_bg">
         <div class="loader"></div>
         <span></span>
-    </div> -->
+    </div>
     <header>
         <h2>ORG.RESULT</h2>
         <ul>
@@ -626,10 +626,10 @@
             // m.addEventListener('mouseOut' ,alert('Try the direct links'));
 
         }
-        // setTimeout(function () {
-        //     $('.loader_bg').fadeToggle();
-        // }, 1500
-        // );
+        setTimeout(function () {
+           $('.loader_bg').fadeToggle();
+         }, 1500
+         );
     </script>
 </body>
 
